--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ section {
 }
 .container {
   margin: 0 auto;
-  width: 1170px;
+  max-width: 1170px;
 }
 .align-center {
   align-items: center;
@@ -34,7 +34,7 @@ section {
 }
 .btn {
   cursor: pointer;
-  border: none;
+  border: 0;
   padding: 6px 12px;
   border-radius: 3px;
   line-height: 1.4;
